--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -11,5 +11,8 @@
       <p>Checkout your developer console.</p>
     </div>
     <script src="js/compiled/bombinate.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      bombinate.core.init_BANG_();
+    </script>
   </body>
 </html>
