--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>bombinate yo 🌟🌟🌟🌟🌟 </title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
