--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bombinate yo 🌟🌟🌟🌟🌟 </title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" />
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
