--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,10 +9,9 @@
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
       <p>Checkout your developer console.</p>
     </div>
-    <script src="js/compiled/bombinate.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
     <script type="text/javascript">
       bombinate.core.init_BANG_();
     </script>
